--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint-react/eslint-plugin": "^1.5.14",
+    "@kiwi/ts-config": "workspace:*",
     "@types/node": "^20.14.2",
     "cz-git": "^1.9.2",
     "czg": "^1.9.2",
