--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install"
   },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.20.0",
     "@commitlint/cli": "^19.3.0",
@@ -19,6 +23,8 @@
     "@eslint-react/eslint-plugin": "^1.5.14",
     "@kiwi/ts-config": "workspace:*",
     "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "cz-git": "^1.9.2",
     "czg": "^1.9.2",
     "eslint": "^9.4.0",
@@ -26,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
+    "sass": "^1.77.4",
     "typescript": "^5.4.5"
   },
   "config": {
