feat(ui): create shadcn ui package

--- a/apps/erp/package.json
+++ b/apps/erp/package.json
@@ -8,10 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@kiwi/ui": "workspace:*",
     "next": "^14.2.3"
-  },
-  "devDependencies": {
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4"
   }
 }
