--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.5",
+    "postcss": "^8.4.38",
     "sass": "^1.77.4",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5"
   },
   "config": {
