feat(erp): login page

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "./dropdown-menu": "./src/dropdown-menu.tsx",
     "./form": "./src/form.tsx",
     "./hover-card": "./src/hover-card.tsx",
+    "./icons": "./src/icons.tsx",
     "./input-otp": "./src/input-otp.tsx",
     "./input": "./src/input.tsx",
     "./label": "./src/label.tsx",
@@ -43,7 +44,9 @@
     "./switch": "./src/switch.tsx",
     "./table": "./src/table.tsx",
     "./tabs": "./src/tabs.tsx",
+    "./tailwind-indicator": "./src/tailwind-indicator.tsx",
     "./textarea": "./src/textarea.tsx",
+    "./theme-provider": "./src/theme-provider.tsx",
     "./toast": "./src/toast.tsx",
     "./toaster": "./src/toaster.tsx",
     "./toggle-group": "./src/toggle-group.tsx",
