--- a/apps/erp/package.json
+++ b/apps/erp/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@kiwi/ui": "workspace:*",
-    "next": "^14.2.3"
+    "next": "^14.2.3",
+    "react-hook-form": "^7.51.5",
+    "zod": "^3.23.8"
   }
 }
